#+TITLE: Asynchronous HTTP Client - Clojure - Changelog
#+AUTHOR: Hubert Iwaniuk
#+EMAIL: hubert@happyhacking.nl
#+SETUPFILE: setup.org

* Release 0.4.5
** Multipart support
   Allow POST and PUT to send multipart messages.
   When *vector* is provided as body it is treated as multipart.
   Please consult documentation and tests for examples of usage.
** There's a function for that!
   Listen to what kibit has to say.
* Release 0.4.4
** Simplified callbacks API
   Issue [[https://github.com/neotyk/http.async.client/issues/32][#32]].
** Better documented callbacks
   This was long outstanding issue [[https://github.com/neotyk/http.async.client/issues/12][#12]].
** Upgrade [[https://github.com/sonatype/async-http-client][AHC]] to 1.7.4
** Upgrade Clojure to 1.4
* Release 0.4.3
** Issue [[https://github.com/neotyk/http.async.client/pull/30][#30]] by [[https://github.com/canassa][Cesar Canassa]]
   Fixes issue with single cookie in response.
** Upgrade AHC to 1.7.1
* Release 0.4.2
** Issue [[https://github.com/neotyk/http.async.client/pull/29][#29]] by [[https://github.com/diamondap][A. Diamond]]
   Added support for client certificates.
* Release 0.4.1
** Upgrade AHC to 1.7.0
** Issues [[https://github.com/neotyk/http.async.client/issues/26][#26]], [[https://github.com/neotyk/http.async.client/issues/27][#27]], [[https://github.com/neotyk/http.async.client/issues/28][#28]]
   - [[https://github.com/neotyk/http.async.client/issues/26][#26]] :: [[https://github.com/jkk][Justin Kramer]], [[https://github.com/btatnall][Brian Tatnall]]
            Empty response body hangs c/body, c/string
   - [[https://github.com/neotyk/http.async.client/issues/27][#27]] :: [[https://github.com/jkk][Justin Kramer]]
            create-client's :idle-in-pool-timeout option not being set
            correctly
   - [[https://github.com/neotyk/http.async.client/pull/28][#28]] :: [[https://github.com/klang][Karsten Lang]]
            Documentation update
** Improved logging