@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1"/>
 <meta name="title" content="Asynchronous HTTP Client - Clojure - Changelog"/>
 <meta name="generator" content="Org-mode"/>
-<meta name="generated" content="2012-05-04 23:07:49 CEST"/>
+<meta name="generated" content="2012-05-06 23:56:59 CEST"/>
 <meta name="author" content="Hubert Iwaniuk"/>
 <meta name="description" content=""/>
 <meta name="keywords" content=""/>
@@ -117,7 +117,8 @@ org_html_manager.setup();  // activate after the parameters are set
 <li><a href="#sec-1">1 Release 0.4.5</a>
 <ul>
 <li><a href="#sec-1-1">1.1 Multipart support</a></li>
-<li><a href="#sec-1-2">1.2 There's a function for that!</a></li>
+<li><a href="#sec-1-2">1.2 Add convenience url and raw-url</a></li>
+<li><a href="#sec-1-3">1.3 There's a function for that!</a></li>
 </ul>
 </li>
 <li><a href="#sec-2">2 Release 0.4.4</a>
@@ -229,8 +230,17 @@ org_html_manager.setup();  // activate after the parameters are set
 </div>
 
 <div id="outline-container-1-2" class="outline-3">
-<h3 id="sec-1-2"><span class="section-number-3">1.2</span> There's a function for that!</h3>
+<h3 id="sec-1-2"><span class="section-number-3">1.2</span> Add convenience url and raw-url</h3>
 <div class="outline-text-3" id="text-1-2">
+
+<p>   <a href="https://github.com/neotyk/http.async.client/issues/35">#35</a>. Allow easy retrieval of URL used to request resource.
+</p></div>
+
+</div>
+
+<div id="outline-container-1-3" class="outline-3">
+<h3 id="sec-1-3"><span class="section-number-3">1.3</span> There's a function for that!</h3>
+<div class="outline-text-3" id="text-1-3">
 
 <p>   Listen to what kibit has to say.
 </p></div>
@@ -779,7 +789,7 @@ org_html_manager.setup();  // activate after the parameters are set
 </div>
 
 <div id="postamble">
-<p class="date">Date: 2012-05-04 23:07:49 CEST</p>
+<p class="date">Date: 2012-05-06 23:56:59 CEST</p>
 <p class="author">Author: Hubert Iwaniuk</p>
 <p class="creator">Org version 7.8.03 with Emacs version 24</p>
 <a href="http://validator.w3.org/check?uri=referer">Validate XHTML 1.0</a>
