@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1"/>
 <meta name="title" content="http.async.client - Asynchronous HTTP Client - Clojure"/>
 <meta name="generator" content="Org-mode"/>
-<meta name="generated" content="2012-05-04 23:05:08 CEST"/>
+<meta name="generated" content="2012-05-06 23:58:27 CEST"/>
 <meta name="author" content="Hubert Iwaniuk"/>
 <meta name="description" content=""/>
 <meta name="keywords" content=""/>
@@ -135,7 +135,7 @@ org_html_manager.setup();  // activate after the parameters are set
 <pre class="src src-clojure"><span style="color: #8c8c8c;">(</span>defproject your-project <span style="color: #8b2252;">"1.0.0-SNAPSHOT"</span>
   <span style="color: #008b8b;">:description</span> <span style="color: #8b2252;">"Your project description"</span>
   <span style="color: #008b8b;">:dependencies</span> [[org.clojure/clojure <span style="color: #8b2252;">"1.4.0"</span>]
-                 [http.async.client <span style="color: #8b2252;">"0.4.5-SNAPSHOT"</span>]]<span style="color: #8c8c8c;">)</span>
+                 [http.async.client <span style="color: #8b2252;">"0.4.5"</span>]]<span style="color: #8c8c8c;">)</span>
 </pre>
 
 
@@ -211,7 +211,7 @@ org_html_manager.setup();  // activate after the parameters are set
 </div>
 
 <div id="postamble">
-<p class="date">Date: 2012-05-04 23:05:08 CEST</p>
+<p class="date">Date: 2012-05-06 23:58:27 CEST</p>
 <p class="author">Author: Hubert Iwaniuk</p>
 <p class="creator">Org version 7.8.03 with Emacs version 24</p>
 <a href="http://validator.w3.org/check?uri=referer">Validate XHTML 1.0</a>
