@@ -12,7 +12,7 @@
   (defproject your-project "1.0.0-SNAPSHOT"
     :description "Your project description"
     :dependencies [[org.clojure/clojure "1.4.0"]
-                   [http.async.client "0.4.5-SNAPSHOT"]])
+                   [http.async.client "0.4.5"]])
 #+END_SRC
 
   Require:
